argocd-config-main/cosmo/app-resources/kube-prometheus-stack/manifests/ExternalDns-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-kps-orca-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.cosmo.i0000007vpc0000017.svc.intdev.cloud.bwi.intranet-bw.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kps-orca-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.cosmo.i0000007vpc0000017.svc.intdev.cloud.bwi.intranet-bw.de
      secretName: grafana-kps-orca-tls
